# tugboat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  index.html
examples/: basic_usage.py  ben_policy.md
tests/: test_adapter.py  test_navigator.py  test_observer.py  test_policy.py  test_subagent.py
tugboat/: __init__.py  __main__.py  adapter.py  channels.py  navigator.py  observer.py  policy.py  subagent.py
tugboat/engines/: __init__.py  base.py  mock_engine.py  ollama_engine.py
